Fix flicker when navigating from Home to Projects page
The flicker was caused by the body's data-page-slug attribute being
updated slightly after the page has already navigated.

--- a/src/styles/_containers.scss
+++ b/src/styles/_containers.scss
@@ -72,7 +72,7 @@ main {
   }
 }
 
-[data-page-slug='/'] .page {
+.page[data-slug='/'] {
   p {
     max-width: 450px;
   }
